[gd_scene load_steps=13 format=3 uid="uid://scb1xesuglwb"]

[ext_resource type="PackedScene" uid="uid://dnirqsybh7586" path="res://scenes/office/characters/office_player.tscn" id="1_gp0to"]
[ext_resource type="Script" path="res://scripts/office.gd" id="1_oaapr"]
[ext_resource type="PackedScene" uid="uid://nie1gx4wd1yq" path="res://scenes/office/office_tile_map.tscn" id="2_lgbfa"]
[ext_resource type="AudioStream" uid="uid://dgo41klkfoc2n" path="res://assets/trapezoid.wav" id="2_x8bg8"]
[ext_resource type="PackedScene" uid="uid://bwakp2pfegwpx" path="res://scenes/global/scene_transition_trigger.tscn" id="3_h4kgp"]
[ext_resource type="PackedScene" uid="uid://bgiuwib4vkehr" path="res://scenes/global/interaction_zone.tscn" id="6_eoly7"]
[ext_resource type="PackedScene" uid="uid://ygw7ygebw1ow" path="res://scenes/office/characters/npc_daniel.tscn" id="7_k3s07"]
[ext_resource type="PackedScene" uid="uid://cfd4fhuh1fs0f" path="res://scenes/office/characters/npc_omar.tscn" id="8_18rbf"]
[ext_resource type="PackedScene" uid="uid://dxspje27lld8f" path="res://scenes/global/cutscene_trigger.tscn" id="8_nrk4j"]
[ext_resource type="PackedScene" uid="uid://n8epktbmk87h" path="res://scenes/office/characters/npc_brenda.tscn" id="9_r4yl8"]
[ext_resource type="PackedScene" uid="uid://dbm8mq2x6yw4k" path="res://scenes/office/characters/generic-worker.tscn" id="11_k2ll5"]
[ext_resource type="PackedScene" uid="uid://bwoxdmley5x3h" path="res://scenes/office/characters/generic_worker_female.tscn" id="12_xwv35"]

[node name="Office" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_oaapr")
theme = ExtResource("2_x8bg8")

[node name="OfficePlayer" parent="." instance=ExtResource("1_gp0to")]
position = Vector2(177, 231)
camera_limit_right = 448
camera_limit_bottom = 272

[node name="OfficeTileMap" parent="." instance=ExtResource("2_lgbfa")]
position = Vector2(32, 48)
layer_0/tile_data = PackedInt32Array(786431, 196608, 7, 720897, 196608, 7, 720899, 196608, 7, 720901, 196608, 7, 720907, 196608, 7, 720909, 196608, 7, 720911, 196608, 7, 720913, 196608, 7, 720915, 196608, 7, 720917, 196608, 7, 720919, 196608, 7, 655383, 196608, 7, 655381, 196608, 7, 655379, 196608, 7, 589845, 196608, 7, 589843, 196608, 7, 589847, 196608, 7, 524311, 196608, 7, 524309, 196608, 7, 458773, 196608, 7, 458775, 196608, 7, 393239, 196608, 7, 393237, 196608, 7, 393235, 196608, 7, 458771, 196608, 7, 524307, 196608, 7, 655377, 196608, 7, 589839, 196608, 7, 524301, 196608, 7, 458763, 196608, 7, 262149, 196608, 7, 196611, 196608, 7, 131073, 196608, 7, 131071, 196608, 7, 1, 196608, 7, -1, 196608, 7, 65539, 196608, 7, 131077, 196608, 7, 327691, 196608, 7, 393229, 196608, 7, 458767, 196608, 7, 524305, 196608, 7, 393233, 196608, 7, 262161, 196608, 7, 131089, 196608, 7, 17, 196608, 7, -65521, 196608, 7, 65551, 196608, 7, 196623, 196608, 7, 327695, 196608, 7, 262157, 196608, 7, 131085, 196608, 7, 13, 196608, 7, -65525, 196608, 7, 65547, 196608, 7, 196619, 196608, 7, 5, 196608, 7, -65533, 196608, 7, 655373, 196608, 7, 589835, 196608, 7, 655365, 196608, 7, 589827, 196608, 7, 655361, 196608, 7, 655359, 196608, 7, 524289, 196608, 7, 524287, 196608, 7, 393217, 196608, 7, 393215, 196608, 7, 262145, 196608, 7, 262143, 196608, 7, 327683, 196608, 7, 393221, 196608, 7, 524293, 196608, 7, 458755, 196608, 7, 131091, 0, 0, 131087, 196608, 7, 65553, 196608, 7, 15, 196608, 7, -65519, 196608, 7, -65523, 196608, 7, 65549, 196608, 7, 11, 196608, 7, 131083, 196608, 7, 262155, 196608, 7, 327693, 196608, 7, 196621, 196608, 7, 262159, 196608, 7, 393231, 196608, 7, 327697, 196608, 7, 458769, 196608, 7, 458765, 196608, 7, 524303, 196608, 7, 589841, 196608, 7, 655375, 196608, 7, 589837, 196608, 7, 655371, 196608, 7, 524299, 196608, 7, 393227, 196608, 7, 589829, 196608, 7, 458757, 196608, 7, 327685, 196608, 7, 196613, 196608, 7, 65541, 196608, 7, -65531, 196608, 7, 3, 196608, 7, 131075, 196608, 7, 262147, 196608, 7, 393219, 196608, 7, 524291, 196608, 7, 655363, 196608, 7, 589825, 196608, 7, 720895, 196608, 7, 589823, 196608, 7, 458753, 196608, 7, 458751, 196608, 7, 327681, 196608, 7, 327679, 196608, 7, 196609, 196608, 7, 196607, 196608, 7, 65537, 196608, 7, 65535, 196608, 7, -65535, 196608, 7, 720903, 196608, 7, 655369, 196608, 7, 589831, 196608, 7, 524297, 196608, 7, 458759, 196608, 7, 393225, 196608, 7, 327687, 196608, 7, 262153, 196608, 7, 196615, 196608, 7, 131081, 196608, 7, 65543, 196608, 7, 9, 196608, 7, -65529, 196608, 7, -131063, 196608, 7, -196601, 196608, 7, -196599, 196608, 7, -131065, 196608, 7, -65527, 196608, 7, 7, 196608, 7, 65545, 196608, 7, 131079, 196608, 7, 196617, 196608, 7, 262151, 196608, 7, 327689, 196608, 7, 393223, 196608, 7, 458761, 196608, 7, 524295, 196608, 7, 589833, 196608, 7, 655367, 196608, 7, 720905, 196608, 7, 786440, 196608, 7, 196625, 196608, 7, 262163, 196608, 7, 262165, 196608, 7, 262167, 196608, 7, 327699, 196608, 7, 327701, 196608, 7, 327703, 196608, 7, 196628, 0, 0, 65556, 0, 0, -65516, 0, 0, 21, 0, 0, 131093, 0, 0, 196630, 0, 0, 65558, 0, 0, -65514, 0, 0, 23, 0, 0, 131095, 0, 0, 196632, 0, 0, 65560, 0, 0, -65512, 0, 0, 65555, 196608, 0, 131092, 196608, 0, 65557, 196608, 0, 20, 196608, 0, -65515, 196608, 0, 22, 196608, 0, 65559, 196608, 0, 131094, 196608, 0, 196629, 196608, 0, 196631, 196608, 0, 131096, 196608, 0, 24, 196608, 0, -65513, 196608, 0)
layer_1/tile_data = PackedInt32Array(786432, 262144, 0, 786433, 262144, 0, 786434, 262144, 0, 786435, 262144, 0, 786436, 262144, 0, 786437, 262144, 0, 786438, 262144, 0, 786439, 262144, 0, 786442, 262144, 0, 786444, 262144, 0, 786445, 262144, 0, 786446, 262144, 0, 786447, 262144, 0, 786448, 262144, 0, 786449, 262144, 0, 786450, 262144, 0, 786443, 262144, 0, 196627, 262144, 0, 262163, 262144, 0, 327699, 262144, 0, 393235, 262144, 0, 458771, 262144, 0, 524307, 262144, 0, 262142, 262144, 0, 327678, 262144, 0, 393214, 262144, 0, 458750, 262144, 0, 524286, 262144, 0, 589822, 262144, 0, 655358, 262144, 0, 720894, 262144, 0, 786430, 262144, 0, 851966, 262144, 0, 851967, 262144, 0, 589843, 327680, 3, 786451, 262144, 0, 65534, 262144, 0, 131070, 262144, 0, 196606, 262144, 0, -131053, 262144, 0, -65517, 262144, 0, 19, 327680, 3, -65538, 262144, 0, -2, 262144, 0, -65537, 327680, 3, -131072, 327680, 3, -131071, 327680, 3, -131070, 327680, 3, -131069, 327680, 3, -131068, 327680, 3, -131067, 327680, 3, -131066, 327680, 3, -131065, 327680, 3, -131062, 327680, 3, -131061, 327680, 3, -131060, 327680, 3, -131059, 327680, 3, -131058, 327680, 3, -131057, 327680, 3, -131056, 327680, 3, -131055, 327680, 3, -131054, 327680, 3, -131074, 262144, 0, -131073, 262144, 0, -196608, 262144, 0, -196607, 262144, 0, -196606, 262144, 0, -196605, 262144, 0, -196604, 262144, 0, -196603, 262144, 0, -196602, 262144, 0, -196601, 262144, 0, -196598, 262144, 0, -196597, 262144, 0, -196596, 262144, 0, -196595, 262144, 0, -196594, 262144, 0, -196593, 262144, 0, -196592, 262144, 0, -196591, 262144, 0, -196590, 262144, 0, -196589, 262144, 0, 851976, 262144, 0, 851977, 262144, 0, 851975, 262144, 0, 851978, 262144, 0, -262136, 262144, 0, -262137, 262144, 0, -262134, 262144, 0, -262135, 262144, 0, -131052, 327680, 3, -131051, 327680, 3, -131050, 327680, 3, -131049, 327680, 3, -131048, 327680, 3, -196588, 262144, 0, -196587, 262144, 0, -196586, 262144, 0, -196585, 262144, 0, -196584, 262144, 0, -196583, 262144, 0, -131047, 262144, 0, -65511, 262144, 0, 25, 262144, 0, 65561, 262144, 0, 131097, 262144, 0, 196633, 262144, 0, 262164, 262144, 0, 262165, 262144, 0, 262166, 262144, 0, 262167, 262144, 0, 262168, 262144, 0, 262169, 262144, 0, 327700, 327680, 3, 327701, 327680, 3, 327702, 327680, 3, 327703, 327680, 3, 327704, 327680, 3, 327705, 262144, 0, 393241, 262144, 0, 458777, 262144, 0, 524313, 262144, 0, 589849, 262144, 0, 655385, 262144, 0, 720921, 262144, 0, 786457, 262144, 0, 786452, 262144, 0, 786453, 262144, 0, 786454, 262144, 0, 786455, 262144, 0, 786456, 262144, 0)
layer_2/tile_data = PackedInt32Array(262157, 0, 1, 262159, 0, 3, 327693, 196608, 1, 327695, 262144, 2, 262156, 458752, 3, 327692, 458752, 4, 196622, 458752, 2, 262158, 458752, 3, 327694, 458752, 4, 196624, 458752, 2, 262160, 458752, 3, 327696, 458752, 4, 196621, 393216, 2, 196623, 393216, 2, 196620, 458752, 268435458, 196619, 327680, 2, 196625, 393216, 2, 196626, 458752, 2, 262162, 458752, 3, 327698, 458752, 4, 262161, 65536, 3, 327697, 262144, 1, 196614, 327680, 268435458, 196613, 458752, 2, 262149, 458752, 3, 327685, 458752, 4, 196611, 458752, 2, 262147, 458752, 3, 327683, 458752, 4, 196609, 458752, 2, 262145, 458752, 3, 327681, 458752, 4, 196610, 393216, 2, 196612, 393216, 2, 262143, 458752, 2, 327679, 458752, 3, 393215, 458752, 4, 196608, 393216, 2, 262144, 0, 1, 262146, 0, 3, 262148, 65536, 1, 458757, 458752, 2, 524293, 458752, 3, 589829, 458752, 4, 458755, 458752, 2, 524291, 458752, 3, 589827, 458752, 4, 458753, 458752, 2, 524289, 458752, 3, 589825, 458752, 4, 524287, 458752, 2, 589823, 458752, 3, 655359, 458752, 4, 458752, 393216, 2, 458754, 393216, 2, 458756, 393216, 2, 327680, 196608, 1, 327682, 131072, 1, 327684, 262144, 2, 524288, 65536, 1, 524290, 0, 1, 524292, 0, 3, 589824, 262144, 2, 589826, 262144, 1, 589828, 196608, 1, 458764, 458752, 2, 524300, 458752, 3, 589836, 458752, 4, 458766, 458752, 2, 524302, 458752, 3, 589838, 458752, 4, 458768, 458752, 2, 524304, 458752, 3, 589840, 458752, 4, 458770, 458752, 2, 524306, 458752, 3, 589842, 458752, 4, 458769, 393216, 2, 458767, 393216, 2, 458765, 393216, 2, 458763, 327680, 2, 524301, 65536, 1, 524303, 65536, 3, 524305, 0, 3, 589837, 131072, 1, 589839, 262144, 2, 589841, 196608, 2, -65524, 458752, 2, 12, 458752, 3, 65548, 458752, 4, -65522, 458752, 2, 14, 458752, 3, 65550, 458752, 4, -65520, 458752, 2, 16, 458752, 3, 65552, 458752, 4, -65518, 458752, 2, 18, 458752, 3, 65554, 458752, 4, -65523, 393216, 2, -65521, 393216, 2, -65519, 393216, 2, -65525, 327680, 2, -65531, 458752, 2, 5, 458752, 3, 65541, 458752, 4, -65533, 458752, 2, 3, 458752, 3, 65539, 458752, 4, -65535, 458752, 2, 1, 458752, 3, 65537, 458752, 4, -1, 458752, 2, 65535, 458752, 3, 131071, 458752, 4, -65536, 393216, 2, -65534, 393216, 2, -65532, 393216, 2, -65530, 327680, 268435458, 65536, 262144, 1, 65538, 262144, 2, 65540, 196608, 2, 0, 65536, 3, 2, 65536, 1, 4, 0, 3, 65549, 131072, 2, 65551, 196608, 1, 65553, 131072, 1, 13, 65536, 3, 15, 0, 1, 17, 0, 3, 262155, 196608, 3, 11, 196608, 3, 262150, 196608, 3, 6, 196608, 3, 720903, 131072, 3, 720906, 131072, 3, -131070, 196608, 4, -131057, 131072, 4, 393238, 262144, 3, 393240, 262144, 3, 393237, 196608, 3, 393239, 196608, 3, 524309, 0, 5, 589845, 0, 6, 655381, 0, 7, 524310, 65536, 5, 589846, 65536, 6, 655382, 65536, 7, 524311, 131072, 5, 589847, 131072, 6, 655383, 131072, 7, -131066, 65536, 4, -131061, 0, 4, 458758, 327680, 268435458, 524299, 262144, 3, 393236, 262144, 3, 524294, 262144, 3, -131051, 65536, 4, -131049, 196608, 5, 720915, 131072, 3, 22, 458752, 6, 21, 393216, 7, 20, 327680, 7, -65516, 327680, 6)

[node name="SceneTransitionTrigger" parent="." instance=ExtResource("3_h4kgp")]
position = Vector2(160, 0)
scale = Vector2(2, 0.5)
scene_to_load = "res://scenes/office/my_office.tscn"
required_item_or_action = "standup_done"

[node name="SceneTransitionTrigger2" parent="." instance=ExtResource("3_h4kgp")]
position = Vector2(160, 248)
scale = Vector2(2, 0.5)
scene_to_load = "res://scenes/office/office_reception.tscn"
player_load_position = Vector2(256, 32)
player_load_animation = "idle_down"

[node name="InteractionZone" parent="." instance=ExtResource("6_eoly7")]
position = Vector2(128, 180)
scale = Vector2(1.16, 0.96)
interaction_name = &"office_bookcase_1"
dialogue_scene = true

[node name="InteractionZone2" parent="." instance=ExtResource("6_eoly7")]
position = Vector2(416, 150)
scale = Vector2(1.2, 0.999998)
interaction_name = &"office_bookcase_3"
dialogue_scene = true

[node name="InteractionZone3" parent="." instance=ExtResource("6_eoly7")]
position = Vector2(205, 118)
scale = Vector2(1.32, 1)
interaction_name = &"office_drawers_1"
dialogue_scene = true

[node name="InteractionZone4" parent="." instance=ExtResource("6_eoly7")]
position = Vector2(125, 118)
scale = Vector2(1.32, 1)
interaction_name = &"office_drawers_2"
dialogue_scene = true

[node name="InteractionZone5" parent="." instance=ExtResource("6_eoly7")]
position = Vector2(205, 180)
scale = Vector2(1.32, 1)
interaction_name = &"office_bookcase_2"
dialogue_scene = true

[node name="InteractionZone6" parent="." instance=ExtResource("6_eoly7")]
position = Vector2(368, 32)
interaction_name = &"office_kitchen_fridge"
dialogue_scene = true

[node name="NPC_Daniel" parent="." instance=ExtResource("7_k3s07")]
position = Vector2(149, 143)

[node name="NPC_Omar" parent="." instance=ExtResource("8_18rbf")]
position = Vector2(216, 75)

[node name="NPC_Brenda" parent="." instance=ExtResource("9_r4yl8")]
position = Vector2(421, 199)

[node name="CutsceneTrigger" parent="." instance=ExtResource("8_nrk4j")]
position = Vector2(362, 201)
scale = Vector2(0.52, 2.04)
cutscene_name = &"standup"

[node name="GenericWorker" parent="." instance=ExtResource("11_k2ll5")]
position = Vector2(41, 126)

[node name="GenericWorker2" parent="." instance=ExtResource("11_k2ll5")]
position = Vector2(104, 126)

[node name="GenericWorker3" parent="." instance=ExtResource("11_k2ll5")]
position = Vector2(72, 191)

[node name="GenericWorker4" parent="." instance=ExtResource("11_k2ll5")]
position = Vector2(312, 125)

[node name="GenericWorker5" parent="." instance=ExtResource("11_k2ll5")]
position = Vector2(281, 191)

[node name="GenericWorker6" parent="." instance=ExtResource("11_k2ll5")]
position = Vector2(248, 190)

[node name="GenericWorker7" parent="." instance=ExtResource("11_k2ll5")]
position = Vector2(280, 63)

[node name="GenericWorkerFemale" parent="." instance=ExtResource("12_xwv35")]
position = Vector2(248, 126)

[node name="GenericWorkerFemale2" parent="." instance=ExtResource("12_xwv35")]
position = Vector2(40, 190)

[node name="GenericWorkerFemale3" parent="." instance=ExtResource("12_xwv35")]
position = Vector2(72, 62)

[node name="GenericWorkerFemale4" parent="." instance=ExtResource("12_xwv35")]
position = Vector2(41, 62)

[node name="GenericWorkerFemale5" parent="." instance=ExtResource("12_xwv35")]
position = Vector2(248, 62)
